--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.39.0",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
